[package]
name = "stm32wl-subghz"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://git.lusia.moe/lukrecja/stm32wl-subghz"
categories = [ "no-std", "embedded", "asynchronous" ]
keywords = [ "stm32wl", "stm32wle5jc", "lora", "fsk", "gfsk", "msk", "gmsk", "bpsk", "radio", "embedded-hal-async" ]
description = "Sub-GHz radio driver for STM32WL-series microcontrollers"

[dependencies]
embassy-stm32 = { version = "0.5.0", features = ["unstable-pac"] }
embassy-time = "0.5.0"
defmt = "1.0.1"
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
